--- a/public/home.html
+++ b/public/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - HenzChat</title>
+  <title>Home - Coinbase wallet support</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -20,7 +20,7 @@
         <div class="logo-circle-small">
           <i class="fas fa-lock"></i>
         </div>
-        <h1>HenzChat</h1>
+        <h1>Coinbase wallet support</h1>
       </div>
       <div class="user-info">
         <span id="welcome-message">Welcome, User!</span>
@@ -33,7 +33,7 @@
         <div class="placeholder-content">
           <i class="fas fa-home"></i>
           <h3>Home Dashboard</h3>
-          <p>This is your personal dashboard. Select an option from the navigation below to get started.</p>
+          <p>Crypto creates economic freedom by ensuring that people can participate fairly in the economy, and Coinbase is on a mission to increase economic freedom for more than 1 billion people. We’re updating the century-old financial system by providing a trusted platform that makes it easy for people and institutions to engage with crypto assets, including trading, staking, safekeeping, spending, and fast, free global transfers. We also provide critical infrastructure for onchain activity and support builders who share our vision that onchain is the new online. And together with the crypto community, we advocate for responsible rules to make the benefits of crypto available around the world..</p>
         </div>
       </div>
     </main>
